# fastapi-poetry-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: custom_logging.py  error_handler.py  main.py
app/api/routes/: api.py  chatbot_router.py  modelmanager_router.py  retrieval_skill_router.py  slu_router.py
app/core/: config.py  logging_config.json
app/models/schemas/: chatbot_schema.py
