[tool.poetry]
name = "fastapi-poetry-demo"
version = "0.1.0"
description = "None"
authors = ["test <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# Check that this is aligned with your other tools like Black
exclude = [
    ".git",
    "__pycache__",
    ".venv"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    "E501"
]